--- a/hw3/src/questions/question_1.tex
+++ b/hw3/src/questions/question_1.tex
@@ -1,6 +1,7 @@
 % 1. External Design Specifications
 % User displays and report formats if any
 \subsection*{Menu}
+\addcontentsline{toc}{subsection}{Menu}
     \begin{easylist}[itemize]
         & Four buttons (Start game, Options, High Scores, Exit Game)
         & Simple interface
@@ -12,6 +13,7 @@
     \end{center}
 
 \subsection*{Game}
+\addcontentsline{toc}{subsection}{Game}
     \begin{easylist}[itemize]
         & Player sprite
         && Moves left and right, potentially up and down
