--- a/hw3/src/questions/question_3.tex
+++ b/hw3/src/questions/question_3.tex
@@ -5,6 +5,7 @@
 % Pseudocode
 % Data file specifications if applicable
 \subsection*{Interface Specifications}
+\addcontentsline{toc}{subsection}{Interface Specifications}
     % Terrence's portion
     The classes \mintinline{python}{RenderedBase} and
     \mintinline{python}{ActorBase} will form a basis for
@@ -34,6 +35,7 @@
     ShipProjectile class in order to retrieve a missile object.
 
 \subsection*{Class Definitions}
+\addcontentsline{toc}{subsection}{Class Definitions}
     \begin{itemize}
         \item \mintinline{python}{RenderedBase} will implement the basic
         interface for any object which is rendered on the screen.
@@ -71,6 +73,7 @@
     \end{itemize}
 
 \subsection*{Pseudocode}
+\addcontentsline{toc}{subsection}{Pseudocode}
     % Pseudo-code for Base Classes (Terrence's Portion)
     \inputminted{python}{../assets/base_classes.py}
 
@@ -84,6 +87,7 @@
     \inputminted{python}{../assets/sounds_and_projectiles.py}
 
 \subsection*{Data File Specifications}
+\addcontentsline{toc}{subsection}{Data File Specifications}
     One data file for LazerBlast will consist of a
     pickled state of all high scores, and, possibly,
     of the current game state (if a user wants to
