--- a/hw3/src/questions/question_4.tex
+++ b/hw3/src/questions/question_4.tex
@@ -47,6 +47,7 @@ developers reviewing each other’s code and offering any advice on
 possible found issues.
 
 \subsection*{Performance Tests}
+\addcontentsline{toc}{subsection}{Performance Tests}
     The performance tests will be documented within our test
     documentation sheet where we give the test data being used to
     test the performance, the reason which will specify what exactly
@@ -70,6 +71,7 @@ possible found issues.
     speed and overall performance of our game.
 
 \subsection*{Stress Tests}
+\addcontentsline{toc}{subsection}{Stress Tests}
     The stress tests which will be performed in relation to our game
     will include increasing the number of enemy ships to see how
     many ships the program may be able to handle at once. This test
@@ -85,6 +87,7 @@ possible found issues.
     players with a smooth flowing program as well as a challenging game.
 
 \subsection*{Functional Tests}
+\addcontentsline{toc}{subsection}{Functional Tests}
     Once both the performance tests and stress tests have helped in
     determining syntax, libraries, modules, and any other relating
     factors to be used within the program, then functional tests
