--- a/hw3/src/questions/question_5.tex
+++ b/hw3/src/questions/question_5.tex
@@ -1,4 +1,5 @@
 % Appendices
 %
 % Gantt charts for Phase III
-\includepdf[pages=1,angle=90]{../assets/LazerBlast_Phase_3.pdf}
+\addcontentsline{toc}{section}{Appendix}
+\includepdf[pages=1,angle=90,scale=0.8,pagecommand=\section*{Appendix}]{../assets/LazerBlast_Phase_3.pdf}
