Added my section

--- a/rp2/src/rp2.bib
+++ b/rp2/src/rp2.bib
@@ -21,3 +21,10 @@ Reference
   publisher={Bloomsbury Publishing},
   pages={25-38}
 }
+@mastersthesis{Hughes2017,
+  title={Video games help to prepare girls for a competitive future in STEM.},
+  author={Hughes, Leigh A.},
+  school={Kent State University},
+  year={2017},
+  pages={11-56}
+}
