--- a/rp2/src/subsections/background.tex
+++ b/rp2/src/subsections/background.tex
@@ -28,3 +28,19 @@ where they will be susceptible to cognitive decline.  Althogh it
 may seem an intractable group for the gaming industry, 49\% of gamers
 are 18-49 years old, with an average age of 35, and 26\% of gamers are
 over 50 years of age \citep{zelinski2009}.
+
+% James's section
+\textit{Video games help to prepare girls for a competitive future in STEM} focuses on
+the role video games play in the higher-level spacial skill. Among the listed
+titles such as \textit{Tetris} and \textit{Pac-Man} is \textit{Space Invaders}, 
+a vertical arcade shooter.\citep{Hughes2017}
+
+Leigh A. Hughes identifies a bias in the methodology in schools favoring 
+sequential learning styles. A strong link is drawn between visual-spatial skill
+and excellence in STEM-related fields. By building confidence early on in the
+development of visual-spatial learners, video games can provide opportunities
+to more complex visual-spatial skill development, and in turn STEM careers.
+
+//I am not sure how to format this citation
+Hughes, Leigh A. Video games help to prepare girls for a competitive future in STEM. Diss. Kent State University, 2017.
+
