--- a/rp2/src/subsections/background.tex
+++ b/rp2/src/subsections/background.tex
@@ -28,3 +28,18 @@ where they will be susceptible to cognitive decline.  Althogh it
 may seem an intractable group for the gaming industry, 49\% of gamers
 are 18-49 years old, with an average age of 35, and 26\% of gamers are
 over 50 years of age \citep{zelinski2009}.
+
+% Keefer's Section
+In addition to the cognitive benefits to the older adults that these games
+provide, they also can provide support to a child's development. Dyslexia 
+affects approximately 10% of children, but simply playing video games for a
+short period of time each day can help to improve a child's reading ability.
+
+The study recognizes that children with attention dysfunctions tend to also
+have links to dyslexia, and it is known that attention dysfunction can be
+trained through video games. Within these games, only action video games helped
+to offset the effects, increasing reading speed and accuracy after twelve hours
+of playing. This increase in ability, in turn, would prepare the players for an
+easier ability to perform well academically as well as help players retain
+self-confidence that can be lost through learning disabilities.
+\citep{franceschini2013}
