--- a/rp2/src/rp2.bib
+++ b/rp2/src/rp2.bib
@@ -21,3 +21,13 @@ Reference
   publisher={Bloomsbury Publishing},
   pages={25-38}
 }
+@article{franceschini2013,
+	author = {Franceschini, S., Gori, S., Ruffino, M., Viola, S., Molteni, M., and Facoetti, A.},
+	title = {Action Video Games Make Dyslexic Children Read Better},
+	journal = {Current Biology},
+	year = {2013},
+	volume = {23},
+	number = {6},
+	pages = {462-466},
+	note = {Accessed 2017-2-22}
+}
