--- a/rp2/src/subsections/background.tex
+++ b/rp2/src/subsections/background.tex
@@ -42,4 +42,4 @@ to offset the effects, increasing reading speed and accuracy after twelve hours
 of playing. This increase in ability, in turn, would prepare the players for an
 easier ability to perform well academically as well as help players retain
 self-confidence that can be lost through learning disabilities.
-\citep{franceschini2013}
+\citep{franceschini2013}.
