Added actor models to HW2

--- a/hw2/src/questions/question_7.tex
+++ b/hw2/src/questions/question_7.tex
@@ -8,3 +8,15 @@
 % C:  Object Models
 % D:  Dynamic Models
 % E:  Gantt Charts for phase II
+
+\subsection*{A. Information Gathering}
+
+\subsection*{B. Functional Models}
+
+\subsection*{C. Object Models}
+    \includegraphics{../assets/object_models}
+
+\subsection*{D. Dynamic Models}
+
+\includepdf[pages=1, angle=90, scale=0.8, pagecommand=\subsection*{E. Gantt Charts}]
+           {../assets/LazerBlast.pdf}
