--- a/hw2/src/hw2.tex
+++ b/hw2/src/hw2.tex
@@ -10,12 +10,13 @@
     \and
     Gleason, Meagon\
 }
-\title{Homework 2}
+\title{Phase 2}
 
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage{minted}
 \usepackage[colorlinks=true]{hyperref}
+\usepackage{pdfpages}
 \setkeys{Gin}{width=\linewidth}
 \usepackage[margin=1.0in]{geometry}
 
