Made functional models

--- a/hw2/src/questions/question_7.tex
+++ b/hw2/src/questions/question_7.tex
@@ -12,6 +12,7 @@
 \subsection*{A. Information Gathering}
 
 \subsection*{B. Functional Models}
+    \includegraphics{../assets/functional_models}
 
 \subsection*{C. Object Models}
     \includegraphics{../assets/object_models}
