Finished dynamic models

--- a/hw2/src/questions/question_7.tex
+++ b/hw2/src/questions/question_7.tex
@@ -18,6 +18,7 @@
     \includegraphics{../assets/object_models}
 
 \subsection*{D. Dynamic Models}
+    \includegraphics[width=0.75\linewidth]{../assets/dynamic_models}
 
 \includepdf[pages=1, angle=90, scale=0.8, pagecommand=\subsection*{E. Gantt Charts}]
            {../assets/LazerBlast.pdf}
