Added table of contents to HW2

--- a/hw2/src/hw2.tex
+++ b/hw2/src/hw2.tex
@@ -24,34 +24,46 @@
     \nocite{*}
     \maketitle
 
+    \clearpage
+    \tableofcontents
+    \clearpage
+
     % Meagon
     \section*{System Overview}
+    \addcontentsline{toc}{section}{System Overview}
         \input{questions/question_1}
 
     % Keefer
     \section*{User Interfaces}
+    \addcontentsline{toc}{section}{User Interfaces}
         \input{questions/question_2}
 
     % Terrence
     \section*{Functional and Non-functional Descriptions}
+    \addcontentsline{toc}{section}{Functional and None-functional Descriptions}
         \input{questions/question_3}
 
     % Brad
     \section*{Performance Description}
+    \addcontentsline{toc}{section}{Performance Description}
         \input{questions/question_4}
 
     % James
     \section*{Exception Handling}
+    \addcontentsline{toc}{section}{Exception Handling}
         \input{questions/question_5}
 
     % Terrence
     \section*{Acceptance Criteria}
+    \addcontentsline{toc}{section}{Acceptance Criteria}
         \input{questions/question_6}
 
+    \addcontentsline{toc}{section}{Bibliography}
     \bibliographystyle{plain}
     \bibliography{hw2}
 
     \section*{Appendix}
+    \addcontentsline{toc}{section}{Appendix}
         \input{questions/question_7}
 
 \end{document}
