--- a/hw2/src/questions/question_7.tex
+++ b/hw2/src/questions/question_7.tex
@@ -10,15 +10,20 @@
 % E:  Gantt Charts for phase II
 
 \subsection*{A. Information Gathering}
+\addcontentsline{toc}{subsection}{Information Gathering}
 
 \subsection*{B. Functional Models}
+\addcontentsline{toc}{subsection}{Functional Models}
     \includegraphics{../assets/functional_models}
 
 \subsection*{C. Object Models}
+\addcontentsline{toc}{subsection}{Object Models}
     \includegraphics{../assets/object_models}
 
 \subsection*{D. Dynamic Models}
+\addcontentsline{toc}{subsection}{Dynamic Models}
     \includegraphics[width=0.75\linewidth]{../assets/dynamic_models}
 
+\addcontentsline{toc}{subsection}{Gant Chart}
 \includepdf[pages=1, angle=90, scale=0.8, pagecommand=\subsection*{E. Gantt Charts}]
            {../assets/LazerBlast.pdf}
