--- a/hw4/src/questions/question_2.tex
+++ b/hw4/src/questions/question_2.tex
@@ -1,7 +1,7 @@
 % List the names of the classes or functions fully implemented
 % and the size of each (LOC).
 \begin{easylist}[itemize]
-    & base_classes.py
+    & base\_classes.py
     && RenderedBase
        48 lines
     && ActorBase
