--- a/hw4/src/questions/question_5.tex
+++ b/hw4/src/questions/question_5.tex
@@ -1,5 +1,8 @@
 % Appendices:
 %
-% A:  Tested, and documented (internal comments) program listings.
-%
-% B:  Gantt charts for Phase 4.
+\addcontentsline{toc}{section}{Appendix}
+\subsection*{A. Tested, and documented (internal comments) program listings}
+
+\subsection*{B. Gantt charts for Phase 4}
+% Add the gantt chart here.
+% \includepdf[pages=1,angle=90,scale=0.8]{../assets/LazerBlast_Phase_4.pdf}
