Added hw4 PDF and refactoring

--- a/hw4/src/questions/question_5.tex
+++ b/hw4/src/questions/question_5.tex
@@ -3,6 +3,5 @@
 \addcontentsline{toc}{section}{Appendix}
 \subsection*{A. Tested, and documented (internal comments) program listings}
 
-\subsection*{B. Gantt charts for Phase 4}
 % Add the gantt chart here.
-% \includepdf[pages=1,angle=90,scale=0.8]{../assets/LazerBlast_Phase_4.pdf}
+\includepdf[pages=1,angle=90,scale=0.8,pagecommand=\subsection*{B. Gantt Chart for Phase 4}]{../assets/LazerBlast_Phase4.pdf}
