--- a/hw4/src/hw4.tex
+++ b/hw4/src/hw4.tex
@@ -3,29 +3,25 @@
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage{minted}
-\usepackage{titling}
 \usepackage{pdfpages}
 \usepackage[ampersand]{easylist}
 \usepackage[colorlinks=true]{hyperref}
 \setkeys{Gin}{width=\linewidth}
 \usepackage[margin=1.0in]{geometry}
 
-\input{homework_title}
-
-%\author{%
-%    Reilly, Terrence\
-%    \and
-%    Justice, James\
-%    \and
-%    Goodall, Brad\
-%    \and
-%    Maresh, Keefer\
-%    \and
-%    Gleason, Meagon\
-%}
+\author{%
+    Reilly, Terrence\
+    \and
+    Justice, James\
+    \and
+    Goodall, Brad\
+    \and
+    Maresh, Keefer\
+    \and
+    Gleason, Meagon\
+}
 
 \title{Phase IV}
-\course{CPS410}
 
 \begin{document}
     \maketitle
