Finished (maybe?) phase 4 homework

--- a/hw4/src/questions/question_3.tex
+++ b/hw4/src/questions/question_3.tex
@@ -1,4 +1,4 @@
 % 3.	List the names of the classes or functions not implemented due to the time limit.
-No classes were unimplemented for this phase.  All 11 Unit Tests are currently passing.
-However, there are still no functional/integration tests.  So, some work remains to be
-done with integration.
+No classes were unimplemented for this phase.  All 12 Unit Tests are
+currently passing.  However, there are still no functional or
+integration tests.  So, some work remains to be done with integration.
