--- a/hw4/src/hw4.tex
+++ b/hw4/src/hw4.tex
@@ -3,6 +3,7 @@
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage{minted}
+\setminted[python]{linenos}
 \usepackage{pdfpages}
 \usepackage[ampersand]{easylist}
 \usepackage[colorlinks=true]{hyperref}
