Minor edits and rendered pdf

--- a/rp4/src/subsections/testing.tex
+++ b/rp4/src/subsections/testing.tex
@@ -105,9 +105,10 @@ is likely something else which will need adjusted again later as we
 get our final positions of the players ship and the enemies’ ships
 as we want our laser to look as if it is coming from our ship to the
 enemy ships.  One way which we could do this is by assigning the
-players ships position to the start_pos variable and the targeted
-enemy ships position to the end_pos variable which we can pass to
-our laser drawing module.
+players ships position to the \mintinline{python}{start_pos}
+variable and the targeted enemy ships position to the
+\mintinline{python}{end_pos} variable which we can pass to our laser
+drawing module.
 
 During our testing of this function we had also realized that we
 were calling the wrong module when checking for which key was being
